# bitICP

./: .gitignore  README.md  canister_ids.json  dfx.json  identity.json  verify-schnorr.js  verify-schnorr.ts
backend/: .env.example  package-lock.json  package.json  tsconfig.json
backend/data/: vaults.json
backend/src/: config.ts  index.ts  types.ts
backend/src/routes/: mint.ts  vaults.ts  withdraw.ts
backend/src/services/: mintService.ts  priceService.ts  vaultHealth.ts  vaultStore.ts  withdrawService.ts
backend/src/utils/: bitcoinCli.ts
canisters/: Cargo.toml
canisters/stablecoin/: Cargo.toml  stablecoin.did
canisters/stablecoin/src/: lib.rs
docs/: protocol_signer_config.md
frontend/: .env.ic.example  .env.local.example  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  canisterIds.ts  ic.ts  styles.css  xverse.ts
frontend/src/declarations/: canister_ids.local.json
frontend/src/declarations/stablecoin/: constructor.old.did  index.js  index.ts  service.did  service.did.d.ts  service.did.js  stablecoin.wasm
scripts/: build_rust_canister.sh
src/declarations/stablecoin/: stablecoin.did  stablecoin.did.d.ts  stablecoin.did.js
