[package]
name = "stablecoin"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
ic-cdk = "0.13"
ic-cdk-macros = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
candid = "0.10"
serde_bytes = "0.11"
k256 = { version = "0.13", default-features = false, features = ["alloc", "schnorr", "arithmetic"] }
hex = "0.4"
sha2 = { version = "0.10", default-features = false }
bech32 = { version = "0.9", default-features = false }
